--- a/fm/src/app/app.component.scss
+++ b/fm/src/app/app.component.scss
@@ -14,9 +14,9 @@ body {
 
 /* Sidebar Styles */
 .sidebar {
-  width: 100px;
-  min-width: 280px;
-  background-color:#1e3c72;
+  width: 75px;
+  min-width: 75px  ;
+  background-color:#1c2655;
   color: #fff;
   transition: width 0.3s ease;
   overflow-y: auto;
@@ -24,7 +24,7 @@ body {
 
 .header {
   padding: 20px;
-  border-bottom: 1px solid #555;
+
 }
 
 .header .title {
@@ -45,13 +45,10 @@ body {
 
 .content {
   padding: 15px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  // transition: background-color 0.3s ease;
 }
 
-.content:hover {
-  background-color:sandybrown;
-}
+
 
 .link.with-children .children {
   display: none;
@@ -63,11 +60,7 @@ body {
 }
 
 /* Main Content Styles */
-.main-content {
-  flex: 1;
-  overflow-y: auto;
-  padding: 20px;
-}
+
 
 .router-outlet {
   width: 100%;
@@ -87,10 +80,49 @@ body {
 
 /* Customization */
 .title {
-  color: white; /* Adjust to your brand color */
+  color: white;
+  font-size: 8px;
+
+}
+.title-home{
+  color: white;
+  font-size: 8px;
+  padding-left: 8px;
+}
+.title-profile{
+  color: white;
+  font-size: 8px;
+  padding-left: 8px;
+}
+
+.title-leave{
+  color: white;
+  font-size: 8px;
+  margin-right: -12px;
 }
 
 .footer {
   background-color: #555;
   height: 50px;
+
 }
+
+i{
+  background-color: #222c65;
+  width: 40px;
+  height: 40px;
+  border-radius: 9px;
+  padding-left: 11px;
+  padding-top: 12px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+img{
+  padding-left: 0px;
+  position: absolute;
+  left: 13px;
+  top: 3px;
+  width: 40px;
+}
+
