Durai/task-screen

--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -38,6 +38,14 @@
           <div class="title">Performance</div>
         </div>
       </div>
+
+       <div class="link" (click)="tasksNavigate()">
+        <div class="content">
+
+          <i class="fa-solid fa-tasks"></i>
+          <div class="title">Tasks</div>
+        </div>
+      </div>
     </div>
     <!-- <div class="footer"></div> -->
   </div>
