added a More Options Components

--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -1,28 +1,23 @@
 <div class="app-container">
-  <div class="sidebar" [ngClass]="{ 'expanded': isExpanded }">
+  <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
     <div class="header">
-   <img src="../assets/images/zoho_icon.png">
-
+      <img src="../assets/images/zoho_icon.png" />
     </div>
     <div class="content">
       <div class="link" (click)="newHomeNavigate()">
         <div>
-
-        <i class="fa-solid fa-house"></i>
-        <div class="title-home">Home</div>
+          <i class="fa-solid fa-house"></i>
+          <div class="title-home">Home</div>
         </div>
       </div>
     </div>
     <div class="link" (click)="headerNavigate()">
       <div class="content">
-
         <i class="fa-solid fa-id-card"></i>
         <div class="title-profile">Profile</div>
       </div>
     </div>
     <div class="link with-children">
-
-
       <!-- New Leave Tracking Link -->
       <div class="link" (click)="leaveTrackingNavigate()">
         <div class="content">
@@ -30,27 +25,26 @@
           <div class="title-leave">Leave Tracking</div>
         </div>
       </div>
-
+      <!--More Options-->
       <div class="link" (click)="goalsNavigate()">
         <div class="content">
-
-          <i class="fa-solid fa-trophy"></i>
-          <div class="title">Performance</div>
+          <i [class]="icons"></i>
+          <div class="title">{{ perfomance }}</div>
         </div>
       </div>
-
-       <div class="link" (click)="tasksNavigate()">
+      <div class="link" (click)="togglePopup()">
         <div class="content">
-
-          <i class="fa-solid fa-tasks"></i>
-          <div class="title">Tasks</div>
+          <i class="fa-solid fa-ellipsis"></i>
+          <div class="title-home">More</div>
         </div>
       </div>
+      <app-more-options
+        *ngIf="showPopup"
+        (changeIcons)="getClick($event)"
+      ></app-more-options>
     </div>
-    <!-- <div class="footer"></div> -->
   </div>
-  <div class="main-content" style="width: 100%;">
-    <!-- {{"test"}} -->
+  <div class="main-content" style="width: 100%">
     <router-outlet></router-outlet>
   </div>
 </div>
