--- a/fm/src/app/goals/goals.component.html
+++ b/fm/src/app/goals/goals.component.html
@@ -44,17 +44,17 @@
     <button mat-raised-button (click)="filterGoals('thisYear')">
       This Year ({{ thisYearCount }})
     </button>
-  </div>
 
-  <!-- Add Goal Button -->
+    <!-- Add Goal Button -->
   <button mat-raised-button color="primary" class="add-goal-button" (click)="addGoal()">Add Goal</button>
+
+  </div>
 
   <!-- Goals List -->
   <mat-card *ngFor="let goal of filteredGoals" class="goal-card">
     <div class="goal-info" (click)="navigateToGoalSpace(goal.id)">
-      <h3>{{ goal.name }}</h3>
-      <p>{{ goal.description }}</p>
-      <p>Progress: {{ goal.progress }}%</p>
+      <h1>{{ goal.name }}</h1>
+      <h3>{{ goal.description }}</h3>
     </div>
     <div class="goal-actions">
       <button mat-icon-button color="primary" (click)="openCommentsDialog(goal.id)">
