--- a/fm/src/app/goals/goals.component.scss
+++ b/fm/src/app/goals/goals.component.scss
@@ -10,9 +10,18 @@
     margin-bottom: 20px;
   }
 
+  .filter-buttons{
+    margin-right: 150px;
+    // padding: 0.5rem 10rem;
+    // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    // background-size: cover;
+    margin-bottom: 20px;
+  }
+
   .add-goal-button {
     align-self: flex-start;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
+    margin-left: 250px;
   }
 
   .goal-card {
